Sutter Health/src/objects/A3__c.object
<CustomObject>
    <fields>
        <fullName>Background__c</fullName>
        <description>What problem are you talking about and why?</description>
        <inlineHelpText>What problem are you talking about and why?</inlineHelpText>
        <label>Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Champion</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>A3</relationshipLabel>
        <relationshipName>A3_Champion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coach</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>A3 (Coach)</relationshipLabel>
        <relationshipName>A3_Coach</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmed_Problem_Statement__c</fullName>
        <label>Confirmed Problem Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Conditions__c</fullName>
        <description>Where do things stand now?</description>
        <inlineHelpText>Where do things stand now?</inlineHelpText>
        <label>Current Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Benefit__c</fullName>
        <label>Expected Benefit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Experiments__c</fullName>
        <description>What do you propose and why? (Improvement AND Benefit(s) of Improvement)</description>
        <inlineHelpText>What do you propose and why? (Improvement AND Benefit(s) of Improvement)</inlineHelpText>
        <label>Experiments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gap_Analysis__c</fullName>
        <description>Why does the problem or need exist? (Top Contributor(s) of the Performance Gap AND Root Causes)</description>
        <inlineHelpText>Why does the problem or need exist? (Top Contributor(s) of the Performance Gap AND Root Causes)</inlineHelpText>
        <label>Gap Analysis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_Statement__c</fullName>
        <label>Goal Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Problem_Statement__c</fullName>
        <label>Initial Problem Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Update__c</fullName>
        <label>Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Process_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>A3 (Process Owner)</relationshipLabel>
        <relationshipName>A3_Process_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Conditions_Goal_s__c</fullName>
        <description>What specific outcome is required?</description>
        <inlineHelpText>What specific outcome is required?</inlineHelpText>
        <label>Target Conditions Goal(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VS_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VS Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>A3 (VS Owner)</relationshipLabel>
        <relationshipName>A3_VS_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>A3</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>A3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>